# oxdb-engine

./: .gitignore  README.md
docs/: arc-design.md
oxdb-engine/: Cargo.toml  db_file.db
oxdb-engine/src/: lib.rs  main.rs
oxdb-engine/src/config/: default.rs
oxdb-engine/src/core/: log.rs
oxdb-engine/src/doc/: io.rs  mod.rs  op.rs  prop.rs  sp.rs
oxdb-engine/src/oxdbin/: base.rs  basebin.rs  mod.rs
oxdb-engine/tests/: test_basebin.rs  test_blockfile.rs
oxdb-engine/usage/: encode_in_doc.rs
test/: test.rs
test/oxdb-pg/: Cargo.toml
test/oxdb-pg/src/: main.rs
test/test-pg/: Cargo.toml
test/test-pg/src/: main.rs
